# serializer version: 1
# name: test_all_solutions_constructed
  dict({
    'count': 1,
    'names': list([
      'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT32x32x32_MI16x16x1_SN_LDSB0_AA0_AFC1_AF1_AG0_AGGSUA0_AGNTAB0_AAIGTEn1_AAILTEn1_AFEM1_AFEM1_ASEM1_BL1_BS1_CD1_1_CLR1_CLS0_CADS0_DPKLF0_DSK0_DU32_DTL0_DTLM0_DTVA0_DTVB0_DTVMXSA0_DTVMXSB0_DTVSM0_DPLB0_EPS0_ELFLR0_EMLLn1_FDSI0_GRPM1_GRVWA1_GRVWB1_GSU1_GSUAMB_GSUC0_GSUWGMRR0_GLS0_HPLR0_ISA942_ICIW0_IU1_IA0_KLA_LDSTI0_LBSPPA128_LBSPPB256_LBSPPMXSA0_LBSPPMXSB0_LBSPPM0_LPA4_LPB16_LPMXSA0_LPMXSB0_LPM0_LRVW4_LRVWA4_LRVWB4_LWPMn1_MIAV0_MIWT1_1_MXLIBL_MXSFNS_MDA2_MI16_16_16_1_MLDS65536_MO40_MPM0_MGRIPM1_NR0_NTn1_NTA0_NTB0_NTC0_NTD4_NTE0_NTMXSA0_NTMXSB0_NTM0_NTWS0_NVn1_NVA0_NVB0_NVC0_NVD0_NVE0_NVMXSA0_NVMXSB0_NVM0_NVWS0_NEPBS2_NLCA1_NLCB1_ONLL1_PAP0_PGL0_PGR2_PLR1_PKA1_SFCWGM1_1_1_1_SGROB0_SGR1_SIA3_SLW1_SS1_SU32_SUM1_SUS256_SPO1_SRVW0_SSO0_SVW1_SK0_SKA0_SKFTR0_SKFDPO0_SKXCCM0_SNLL0_SIP1_SGRO0_TDMI0_TDMIM0_TDMS0_TIN0_THn1_THA0_THB0_THC0_THD0_THE0_THMXSA0_THMXSB0_THM0_THWS0_TT1_1_TLDS1_TLDSMn1_ULSGRO0_USL1_USLMX0_UCMLS0_UDFMAC0_UIOFGRO0_UPLRP0_USFGROn1_USI0_VSn1_VWA1_VWB1_WSGRA0_WSGRB0_WSK0_WS64_WG32_8_1_WGM8_WGMXCC1_WGMXCCGn1_WGR0',
    ]),
  })
# ---
# name: test_get_divisor_name[A-group_novec]
  'LSCA'
# ---
# name: test_get_divisor_name[A-group_vec]
  'LVCA'
# ---
# name: test_get_divisor_name[A-nogroup_novec]
  'LVPA'
# ---
# name: test_get_divisor_name[A-nogroup_vec]
  'LSPA'
# ---
# name: test_get_divisor_name[B-group_novec]
  'LSCB'
# ---
# name: test_get_divisor_name[B-group_vec]
  'LVCB'
# ---
# name: test_get_divisor_name[B-nogroup_novec]
  'LVPB'
# ---
# name: test_get_divisor_name[B-nogroup_vec]
  'LSPB'
# ---
# name: test_get_kernels_shape
  dict({
    'all_dicts_or_solutions': True,
    'first_is_self': True,
    'num_kernels': 1,
  })
# ---
# name: test_get_mi_output_info
  tuple(
    4,
    1,
  )
# ---
# name: test_is_direct_to_vgpr_support_data_type
  dict({
    'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_User': True,
  })
# ---
# name: test_mapping_interface
  dict({
    'getattributes_is_state': True,
    'getitem_kernel_language': 'Assembly',
    'iter_matches_keys': True,
    'keys_is_list': True,
    'len': 335,
  })
# ---
# name: test_solution_construction
  dict({
    'keys': list([
      '1LDSBuffer',
      'ActivationAlt',
      'ActivationFuncCall',
      'ActivationFused',
      'AdaptiveGemm',
      'AdaptiveGemmGSUA',
      'AdaptiveGemmNTAB',
      'AssertAIGreaterThanEqual',
      'AssertAILessThanEqual',
      'AssertFree0ElementMultiple',
      'AssertFree1ElementMultiple',
      'AssertSummationElementMultiple',
      'AssignedDerivedParameters',
      'AssignedProblemIndependentDerivedParameters',
      'BufferLoad',
      'BufferStore',
      'CUCount',
      'CUOccupancy',
      'ClusterBarrier',
      'ClusterDim',
      'ClusterLocalRead',
      'CodeObjectVersion',
      'CompactLoopStore',
      'ConvertAfterDS',
      'CustomKernelName',
      'DebugPersistentKernelLoopForever',
      'DebugStreamK',
      'DepthU',
      'DepthULdsDivisor',
      'DeviceNames',
      'DirectToLds',
      'DirectToLdsA',
      'DirectToLdsB',
      'DirectToLdsMetadata',
      'DirectToVgprA',
      'DirectToVgprB',
      'DirectToVgprMXSA',
      'DirectToVgprMXSB',
      'DirectToVgprSparseMetadata',
      'DtlPlusLdsBuf',
      'ESMRuntimeGate',
      'EdgeType',
      'EnableF32XdlMathOp',
      'EnableMatrixInstruction',
      'EnableStinkyTofuESM2',
      'ExpandPointerSwap',
      'ExpertSchedulingMode',
      'ExtraLatencyForLR',
      'ExtraMiLatencyLeft',
      'ForceDisableShadowInit',
      'ForceUnrollSubIter',
      'GlobalReadPerMfma',
      'GlobalReadVectorWidthA',
      'GlobalReadVectorWidthB',
      'GlobalSplitU',
      'GlobalSplitUAlgorithm',
      'GlobalSplitUCoalesced',
      'GlobalSplitUWorkGroupMappingRoundRobin',
      'GlobalWriteVectorWidth',
      'GroupLoadStore',
      'GuaranteeNoPartialA',
      'GuaranteeNoPartialB',
      'GuaranteeNoPartialMetadata',
      'HalfPLR',
      'HalfPLRA',
      'HalfPLRB',
      'ISA',
      'InitCIterWmma',
      'InnerUnroll',
      'InterleaveAlpha',
      'InternalSupportParams',
      'KernelLanguage',
      'LDSTrInst',
      'LSCA',
      'LSCB',
      'LSPA',
      'LSPB',
      'LVCA',
      'LVCB',
      'LVPA',
      'LVPB',
      'LdsBlockSizePerPad',
      'LdsBlockSizePerPadA',
      'LdsBlockSizePerPadB',
      'LdsBlockSizePerPadMXSA',
      'LdsBlockSizePerPadMXSB',
      'LdsBlockSizePerPadMetadata',
      'LdsBytesNoAmax',
      'LdsInitCVgprs',
      'LdsNumBytes',
      'LdsNumElements',
      'LdsNumElementsAlignedA',
      'LdsNumElementsAlignedB',
      'LdsNumElementsAlignedMXSA',
      'LdsNumElementsAlignedMXSB',
      'LdsNumElementsAlignedMetadata',
      'LdsOffsetA',
      'LdsOffsetA_Blk',
      'LdsOffsetB',
      'LdsOffsetB_Blk',
      'LdsOffsetBias',
      'LdsOffsetBiasGSU',
      'LdsOffsetBiasNonGSU',
      'LdsOffsetMXSA',
      'LdsOffsetMXSA_Blk',
      'LdsOffsetMXSB',
      'LdsOffsetMXSB_Blk',
      'LdsOffsetMetadata',
      'LdsOffsetMetadata_Blk',
      'LdsPadA',
      'LdsPadB',
      'LdsPadMXSA',
      'LdsPadMXSB',
      'LdsPadMetadata',
      'LocalReadVectorWidth',
      'LocalReadVectorWidthA',
      'LocalReadVectorWidthB',
      'LocalSplitU',
      'LocalSplitUReuseLDS',
      'LocalWritePerMfma',
      'LocalWriteUseSgprA',
      'LocalWriteUseSgprB',
      'LocalWriteUseSgprMetadata',
      'LoopIters',
      'LoopUnroll',
      'MFMA_BF16_1K',
      'MIArchVgpr',
      'MIBlock',
      'MIInputPerThread',
      'MIInputPerThreadA',
      'MIInputPerThreadB',
      'MIOutputVectorWidth',
      'MIRegPerOut',
      'MIWaveGroup',
      'MIWaveTile',
      'MIWaveTileA',
      'MIWaveTileB',
      'MIWaveTileMetadata',
      'MXLoadInst',
      'MXScaleFormat',
      'MacroTile0',
      'MacroTile1',
      'MacroTileA',
      'MacroTileB',
      'MagicDivAlg',
      'MathClocksUnrolledLoop',
      'MatrixInstB',
      'MatrixInstBM',
      'MatrixInstBN',
      'MatrixInstK',
      'MatrixInstM',
      'MatrixInstN',
      'MatrixInstruction',
      'MaxLDS',
      'MaxOccupancy',
      'MbskPrefetchMethod',
      'MfmaInitCVgprs',
      'MinGRIncPerMfma',
      'Multicast',
      'NoLdsWriteCode',
      'NoReject',
      'NoTailLoop',
      'NonDTLTailLoopA',
      'NonDTLTailLoopB',
      'NonDTLTailLoopMetadata',
      'NonTemporal',
      'NonTemporalA',
      'NonTemporalB',
      'NonTemporalC',
      'NonTemporalD',
      'NonTemporalE',
      'NonTemporalMXSA',
      'NonTemporalMXSB',
      'NonTemporalMetadata',
      'NonTemporalWS',
      'NonVolatile',
      'NonVolatileA',
      'NonVolatileB',
      'NonVolatileC',
      'NonVolatileD',
      'NonVolatileE',
      'NonVolatileMXSA',
      'NonVolatileMXSB',
      'NonVolatileMetadata',
      'NonVolatileWS',
      'NumElementsPerBatchStore',
      'NumElementsPerThread',
      'NumGlobalWriteVectorsPerThread',
      'NumLdsBlk',
      'NumLoadsA',
      'NumLoadsB',
      'NumLoadsCoalescedA',
      'NumLoadsCoalescedB',
      'NumLoadsPerpendicularA',
      'NumLoadsPerpendicularB',
      'NumThreads',
      'NumTotalPackedLoadsA',
      'NumTotalPackedLoadsB',
      'NumWaveSplitK',
      'NumWaves',
      'OptNoLoadLoop',
      'PackedC0IdxChars',
      'PackedC0IndicesX',
      'PackedC1IdxChars',
      'PackedC1IndicesX',
      'PrefetchAcrossPersistent',
      'PrefetchGL2',
      'PrefetchGlobalRead',
      'PrefetchLocalRead',
      'PreloadKernArgs',
      'ProblemType',
      'SFCWGM',
      'ScheduleGROverBarrier',
      'ScheduleGlobalRead',
      'ScheduleIterAlg',
      'ScheduleLocalWrite',
      'SolutionIndex',
      'SolutionNameMin',
      'SourceSwap',
      'SpaceFillingAlgo',
      'StaggerU',
      'StaggerUMapping',
      'StaggerUStride',
      'StorePriorityOpt',
      'StoreRemapVectorWidth',
      'StoreSwapAddr',
      'StoreSyncOpt',
      'StoreVectorWidth',
      'StreamK',
      'StreamKAtomic',
      'StreamKFixupTreeReduction',
      'StreamKForceDPOnly',
      'StreamKXCCMapping',
      'SubGroup0',
      'SubGroup1',
      'SubGroupA',
      'SubGroupB',
      'SuppressNoLoadLoop',
      'SwInstructionPrefetch',
      'SwapGlobalReadOrder',
      'TDMInst',
      'TDMIterateMode',
      'TDMSplit',
      'TailloopInNll',
      'TemporalHint',
      'TemporalHintA',
      'TemporalHintB',
      'TemporalHintC',
      'TemporalHintD',
      'TemporalHintE',
      'TemporalHintMXSA',
      'TemporalHintMXSB',
      'TemporalHintMetadata',
      'TemporalHintWS',
      'ThreadTile',
      'ThreadTile0',
      'ThreadTile1',
      'ThreadTileA',
      'ThreadTileB',
      'TransposeLDS',
      'TransposeLDSMetadata',
      'ULSGRODoubleG2L',
      'UnrollLoopSwapGlobalReadOrder',
      'UnrollMajorLDSA',
      'UnrollMajorLDSB',
      'Use64bShadowLimit',
      'Use64bShadowLimitMX',
      'UseCustomMainLoopSchedule',
      'UseDirect32XEmulation',
      'UseDot2F32XEmulation',
      'UseDotInstruction',
      'UseDualFMAC',
      'UseF32XEmulation',
      'UseGeneralizedNLCOneA',
      'UseGeneralizedNLCOneB',
      'UseGeneralizedNLCOneMXSA',
      'UseGeneralizedNLCOneMXSB',
      'UseGeneralizedNLCOneMetadata',
      'UseInstOffsetForGRO',
      'UseMFMAF32XEmulation',
      'UsePLRPack',
      'UseSgprForGRO',
      'UseSubtileImpl',
      'Valid',
      'VectorStore',
      'VectorWidth',
      'VectorWidthA',
      'VectorWidthB',
      'WaveSeparateGlobalReadA',
      'WaveSeparateGlobalReadB',
      'WaveSeparateGlobalReadMetadata',
      'WaveSplitK',
      'WavefrontSize',
      'WorkGroup',
      'WorkGroupMapping',
      'WorkGroupMappingXCC',
      'WorkGroupMappingXCCGroup',
      'WorkGroupReduction',
      'WorkspaceCheck',
      '_DepthU',
      '_DepthUA',
      '_DepthUB',
      '_DepthULds',
      '_DepthUMetadata',
      '_GlobalAccumulation',
      '_ScheduleIterAlg',
      '_StinkyTofuOptLevel',
      '_UseSgprForGRO',
      '_VectorStore',
      '_WorkspaceSizePerElemBias',
      '_WorkspaceSizePerElemC',
      '_inputVWA_was_auto',
      '_inputVWB_was_auto',
      '_staggerStrideShift',
      'allowLRVWforTLUandMI',
      'enableGLTrA',
      'enableGLTrB',
      'enableLDSTrA',
      'enableLDSTrB',
      'enableLDSTrMXSA',
      'enableLDSTrMXSB',
      'enableLDSTrMetadata',
      'enableTDMA',
      'enableTDMB',
      'enableTDMMetadata',
      'ldsNumBytesA',
      'ldsNumBytesB',
      'ldsNumBytesMXSA',
      'ldsNumBytesMXSB',
      'ldsNumBytesMetadata',
      'numSubTiles',
      'reorderGRInstForDTVA',
      'reorderGRInstForDTVB',
      'tailLoopOptA',
      'tailLoopOptB',
    ]),
    'name': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT32x32x32_MI16x16x1_SN_LDSB0_AA0_AFC1_AF1_AG0_AGGSUA0_AGNTAB0_AAIGTEn1_AAILTEn1_AFEM1_AFEM1_ASEM1_BL1_BS1_CD1_1_CLR1_CLS0_CADS0_DPKLF0_DSK0_DU32_DTL0_DTLM0_DTVA0_DTVB0_DTVMXSA0_DTVMXSB0_DTVSM0_DPLB0_EPS0_ELFLR0_EMLLn1_FDSI0_GRPM1_GRVWA1_GRVWB1_GSU1_GSUAMB_GSUC0_GSUWGMRR0_GLS0_HPLR0_ISA942_ICIW0_IU1_IA0_KLA_LDSTI0_LBSPPA128_LBSPPB256_LBSPPMXSA0_LBSPPMXSB0_LBSPPM0_LPA4_LPB16_LPMXSA0_LPMXSB0_LPM0_LRVW4_LRVWA4_LRVWB4_LWPMn1_MIAV0_MIWT1_1_MXLIBL_MXSFNS_MDA2_MI16_16_16_1_MLDS65536_MO40_MPM0_MGRIPM1_NR0_NTn1_NTA0_NTB0_NTC0_NTD4_NTE0_NTMXSA0_NTMXSB0_NTM0_NTWS0_NVn1_NVA0_NVB0_NVC0_NVD0_NVE0_NVMXSA0_NVMXSB0_NVM0_NVWS0_NEPBS2_NLCA1_NLCB1_ONLL1_PAP0_PGL0_PGR2_PLR1_PKA1_SFCWGM1_1_1_1_SGROB0_SGR1_SIA3_SLW1_SS1_SU32_SUM1_SUS256_SPO1_SRVW0_SSO0_SVW1_SK0_SKA0_SKFTR0_SKFDPO0_SKXCCM0_SNLL0_SIP1_SGRO0_TDMI0_TDMIM0_TDMS0_TIN0_THn1_THA0_THB0_THC0_THD0_THE0_THMXSA0_THMXSB0_THM0_THWS0_TT1_1_TLDS1_TLDSMn1_ULSGRO0_USL1_USLMX0_UCMLS0_UDFMAC0_UIOFGRO0_UPLRP0_USFGROn1_USI0_VSn1_VWA1_VWB1_WSGRA0_WSGRB0_WSK0_WS64_WG32_8_1_WGM8_WGMXCC1_WGMXCCGn1_WGR0',
    'num_keys': 335,
    'problem_type': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs',
    'stable': dict({
      'DepthU': 32,
      'GlobalSplitU': 1,
      'KernelLanguage': 'Assembly',
      'MacroTile0': 32,
      'MacroTile1': 32,
      'MatrixInstB': 1,
      'MatrixInstM': 16,
      'MatrixInstN': 16,
      'ThreadTile': list([
        1,
        1,
      ]),
      'UseCustomMainLoopSchedule': 0,
      'WorkGroup': list([
        32,
        8,
        1,
      ]),
    }),
  })
# ---
